feat:设定经验倍率。